Mise à jour section CV :art:

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Accueil</a></li>
+        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i> Accueil</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> À propos</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> CV</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
         <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -219,8 +219,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>CV</h2>
+        <p>Développeur front-end junior, j’aime transformer des maquettes en expériences web fluides et accessibles. HTML et CSS sont mes bases solides, et je progresse chaque jour sur JavaScript et React. Enthousiaste et toujours en apprentissage, je souhaite collaborer avec une équipe innovante pour créer des solutions digitales impactantes.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -228,61 +228,139 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Sommaire</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Roobens Landre</h4>
+              <p><em>Développeur front-end junior passionné par le web, avec de solides compétences en HTML/CSS et une montée en compétences sur JavaScript et React. Curieux, motivé et rigoureux, je souhaite mettre mon énergie au service de projets concrets et collaborer avec une équipe dynamique afin de créer des interfaces modernes, accessibles et performantes.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Nantes, France</li>
+                <li>+33 7 68 27 22 97</li>
+                <li>roobens971@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title"> 🎓 FORMATION</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
+              <h4>Développeur Intégrateur Web</h4>
+              <h5>2024 - 2025</h5>
+              <p><em>Formation en cours</em></p>
+              <p>Openclassrooms</p>
+           </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Baccalauréat professionnel</h4>
+              <h5>2019 - 2020</h5>
+              <p><em>Lycée Monge La Chauvinière, Nantes</em></p>
+              <p>BEP</p>
+           </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Lycée</h4>
+              <h5>2018 - 2019</h5>
+              <p><em>Lycée Monge La Chauvinière, Nantes</em></p>
+              <p>BEP</p>
+           </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Collège</h4>
               <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p><em>Collège – Stendhal – Nantes</em></p>
+              <p>Obtention du CFG</p>
+            </div><!-- Edn Resume Item -->
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <h3 class="resume-title"> 💼 EXPÉRIENCES PROFESSIONEL</h3>
+            <div class="resume-item">
+              <h4>Agent d’entretien et de restauration</h4>
+              <h5>2020 - 2024</h5>
+              <p><em>CCAS Nantes</em></p>
+              <ul>
+                <li>Mise en place des salles, service, plonge</li>
+                <li>Nettoyage et entretien des locaux</li>
+              </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Stagiaire électricien</h4>
+              <h5>2018 - 2019</h5>
+              <p><em>Braud William / ART Elec, Nantes</em></p>
+              <ul>
+                <li>Tirage de câbles, pose d’appareillages (interrupteurs, prises de courant)</li>
+              </ul>
             </div><!-- Edn Resume Item -->
 
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">💡COMPÉTENCES TECHNIQUES</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Front-end</h4>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>Flexbox, Grid, animations</li>
+                <li>JavaScript ES6+</li>
+                <li>React</li>
+                <li>SCSS</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Outils</h4>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Git & GitHub</li>
+                <li>Figma</li>
+                <li>VS Code</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
+            <div class="resume-item">
+              <h4>Méthodes</h4>
+              <ul>
+                <li>Intégration responsive</li>
+                <li>Organisation du code</li>
+                <li>Respect des bonnes pratiques</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <h3 class="resume-title"> 🎴 ACTIVITÉS ET CENTRE D’INTÉRÊT</h3>
+            <div class="resume-item">
+              <h4>LANGUES</h4>
+              <ul>
+                <li>Français</li>
+                <li>Anglais</li>
+                <li>Créole</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Musique / Musicien, Compositeur</h4>
+              <ul>
+                <li>RnB</li>
+                <li>Pop</li>
+                <li>Hip Hop</li>
+                <li>Rap US</li>
+                <li>Reggae</li>
+                <li>Gospel</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Voyages</h4>
+              <ul>
+                <li>Haïti</li>
+                <li>Saint-Martin (îles)</li>
+                <li>Allemagne</li>
+                <li>Guadeloupe</li>
+                <li>Bahamas</li>
+                <li>République Dominicaine</li>
+                <li>États-Unis</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
           </div>
 
         </div>
