--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -182,7 +182,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Roobens Landre</strong> <span>Tous droits réservés</span></p>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
